add docker file

--- a/BackEnd/IT_Support_API/pom.xml
+++ b/BackEnd/IT_Support_API/pom.xml
@@ -171,6 +171,7 @@
                 </configuration>
             </plugin>
         </plugins>
+        <finalName>dockerit_support</finalName>
     </build>
 
 </project>
